Fix text wrapping in flexboxed paragraphs
Paragraphs within flex containers did not wrap their text properly due
to the fact that the container (being flexbox) did not impose a minimum
width on the paragraphs.

Before the solution was to use 'overflow: hidden;'. Frankly, no idea why
this worked, but it's not the proper solution. The proper solution is to
force a minimum width on the paragraph as little as possible. So, 0px.

--- a/index.css
+++ b/index.css
@@ -182,7 +182,7 @@ input {
 .trujaman_job_header > p {
     font-weight: bold;
     overflow-wrap: break-word;
-    overflow: hidden;
+    min-width: 0px;
 }
 
 .trujaman_job_dismiss_button {
@@ -204,7 +204,7 @@ input {
 .trujaman_job_body > p  {
     flex: 1 0 50%;
     overflow-wrap: break-word;
-    overflow: hidden;
+    min-width: 0px;
 }
 
 .trujaman_job_body > button {
